jeste dalsi texty a poradi tlacitek

--- a/spotify-playlists/app/public/index.html
+++ b/spotify-playlists/app/public/index.html
@@ -24,12 +24,14 @@
 
           <div class="btns">
             <button id="btnReload">Načíst znovu</button>
-            <button id="btnAuth" class="primary">Autorizovat Spotify</button>
-            <button id="btnRun" class="primary">Spustit</button>
+            <button id="btnRun" class="primary">
+              Spustit generování listů
+            </button>
             <button id="btnClearLogs" class="danger">Vymazat logy</button>
             <button id="btnClearHistoryGlobal" class="danger">
               Smazat globální historii
             </button>
+            <button id="btnAuth" class="primary">Autorizovat Spotify</button>
           </div>
 
           <div class="kv">
@@ -133,7 +135,9 @@
 
             <div class="btns">
               <button id="btnAdd" class="primary">Přidat</button>
-              <button id="btnSaveAll" class="primary">Uložit vše</button>
+              <button id="btnSaveAll" class="primary">
+                Uložit vše do konfigurace
+              </button>
               <button id="btnLoad">Načíst</button>
             </div>
           </div>
