--- a/spotify-playlists/app/public/index.html
+++ b/spotify-playlists/app/public/index.html
@@ -134,11 +134,11 @@
             </div>
 
             <div class="btns">
-              <button id="btnAdd" class="primary">Přidat</button>
+              <button id="btnLoad">Načíst</button>
+              <button id="btnAdd" class="primary">Přidat nový list</button>
               <button id="btnSaveAll" class="primary">
                 Uložit vše do konfigurace
               </button>
-              <button id="btnLoad">Načíst</button>
             </div>
           </div>
 
