stremio-zebricky: unify TMDB source options and bump addon to 0.0.18

--- a/stremio-zebricky/app/tools/config-ui/index.html
+++ b/stremio-zebricky/app/tools/config-ui/index.html
@@ -2119,7 +2119,7 @@
                 <details class="help" style="margin-top: 10px">
                   <summary>
                     <span>Co znamená “Zdroje”</span
-                    ><span class="k">fromTrakt / fromLists</span>
+                    ><span class="k">fromTrakt / fromTmdb / fromLists</span>
                   </summary>
                   <div class="helpBody">
                     Zdroje jsou kombinace:
